<resources>
    <string name="app_name">ChildFieldTrip</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_animal_title">AnimalTitle</string>
    <string name="title_activity_domestic">Domestic</string>
    <string name="title_activity_dog">Dog</string>
    <string name="title_activity_farm_animals">FarmAnimals</string>
    <string name="title_activity_cat">Cat</string>
    <string name="title_activity_rodents">Rodents</string>
    <string name="title_activity_reptiles">Reptiles</string>
    <string name="title_activity_birds">Birds</string>
    <string name="title_activity_horse">Horse</string>
    <string-array name="def">
        <item>Amphibian</item>
        <item>Canines</item>
        <item>Carnivore</item>
        <item>Feline</item>
        <item>Herbivore</item>
        <item>Nocturnal</item>
        <item>Mammal</item>
        <item>Omnivore</item>
        <item>Reptile</item>
        <item>Rodent</item>
    </string-array>
    <string-array name="farm">
        <item>Chicken</item>
        <item>Cow</item>
        <item>Horse</item>
        <item>Pig</item>
        <item>Sheep</item>
    </string-array>
    <string-array name="amp">
        <item>Frog</item>
        <item>Toad</item>
    </string-array>
    <string-array name="freshlv">
        <item>Goldfish</item>
        <item>Salmon</item>
    </string-array>
    <string-array name="sealv">
        <item>Clown fish</item>
        <item>Crab</item>
        <item>Dolphin</item>
        <item>Lobster</item>
        <item>Octopus</item>
        <item>Sea turtle</item>
        <item>Shark</item>
        <item>Whale</item>
    </string-array>
    <string-array name="rep">
        <item>Corn Snake</item>
        <item>Turtle</item>
    </string-array>
    <string-array name="rod">
        <item>Guinea Pig</item>
        <item>Ferret</item>
        <item>Hamster</item>
        <item>Mouse</item>
        <item>Rabbit</item>
        <item>Rat</item>
    </string-array>
    <string-array name="bird">
        <item>Parakeet</item>
        <item>Parrot</item>
    </string-array>
    <string-array name="wildmamals">
        <item>Baboon</item>
        <item>Bear</item>
        <item>Boar</item>
        <item>Buffalo</item>
        <item>Deer</item>
        <item>Elephant</item>
        <item>Gazelle</item>
        <item>Giraffe</item>
        <item>Gorilla</item>
        <item>Hippo</item>
        <item>Monkey</item>
        <item>Skunk</item>
        <item>Zebra</item>
    </string-array>
    <string-array name="wildfelines">
        <item>Cheetah</item>
        <item>Leopard</item>
        <item>Lion</item>
        <item>Ocelot</item>
        <item>Panther</item>
        <item>Tiger</item>
    </string-array>
    <string-array name="wildrodents">
        <item>Capybara</item>
        <item>Groundhog</item>
        <item>Meerkat</item>
    </string-array>
    <string-array name="wildreptiles">
        <item>Alligator</item>
        <item>Chameleon</item>
        <item>Crocodile</item>
        <item>Iguana</item>
        <item>Lizard</item>
        <item>Rattlesnake</item>
    </string-array>
    <string-array name="wildbirds">
        <item>Duck</item>
        <item>Eagle</item>
        <item>Penguin</item>
        <item>Seagull</item>
    </string-array>
    <string-array name="wildcanines">
        <item>Coyote</item>
        <item>Fox</item>
        <item>Hyena</item>
        <item>Wolf</item>
    </string-array>
    <string name="pig">Pig</string>
    <string name="guineapig">Guinea Pig</string>
    <string name="hamster">Hamster</string>
    <string name="title_activity_cow">Cow</string>
    <string name="title_activity_parrot">Parrot</string>
    <string name="title_activity_rabbit">Rabbit</string>
    <string name="title_activity_turtle">Turtle</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_mouse">Mouse</string>
    <string name="title_activity_rat">Rat</string>
    <string name="title_activity_parakeet">Parakeet</string>
    <string name="title_activity_sheep">Sheep</string>
    <string name="title_activity_corn_snake">CornSnake</string>
    <string name="go">Go</string>
    <string name="welcome">Welcome to the Animal Field Guide!</string>
    <string name="animals">Animals</string>
    <string name="spellgame">Spell Game</string>
    <string name="wiki">Images and information taken from Wikipedia</string>
    <string name="exit">Exit</string>
    <string name="image">Image here</string>
    <string name="horse">Horse</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="mouse">Mouse</string>
    <string name="rat">Rat</string>
    <string name="rabbit">Rabbit</string>
    <string name="turtle">Turtle</string>
    <string name="cornsnake">Corn Snake</string>
    <string name="cow">Cow</string>
    <string name="sheep">Sheep</string>
    <string name="parakeet">Parakeet</string>
    <string name="parrot">Parrot</string>
    <string name="choose">Click to choose!</string>
    <string name="reptiles">Reptiles</string>
    <string name="rodents">Rodents</string>
    <string name="birds">Birds</string>
    <string name="canines">Canines</string>
    <string name="felines">Felines</string>
    <string name="farmanimals">Farm Animals</string>
    <string name="defaullt">Here we put the description for the dog. Like what the dog eats. Where the dog lives. What is interesting about the dog. Whatever else</string>
    <string name="search">Search for an animal</string>
    <string name="domestic">Domestic</string>
    <string name="aquatic">Aquatic</string>
    <string name="wild">Wild Animals</string>
    <string name="title_activity_tiger">Tiger</string>
    <string name="tiger">Tiger</string>
    <string name="tiger_desc">Tigers are the biggest cat species. They can weigh up to almost 400 kg. They have orange bodies with dark stripes. They mostly feed on ungulates such as bovids. </string>
    <string name="title_activity_cheetah">Cheetah</string>
    <string name="cheetah">Cheetah</string>
    <string name="cheetah_desc">Cheetahs are found in Africa and the Middle East. They are the fasted land animal and run up to 120 km an hour. They are carnivores and eat mmals that are 40 kg and under. </string>
    <string name="title_activity_lion">Lion</string>
    <string name="lion">Lion</string>
    <string name="lion_desc">Lions are the second largest cat. The male lion has a mane used for confrontations with other lions for intimidation. Female lions hunt together in groups.</string>
    <string name="title_activity_zebra">Zebra</string>
    <string name="zebra">Zebra</string>
    <string name="zebra_desc">Zebras belong to the horse family. Each zebra has a unique pattern of stripes. They are social animals and live in herds.</string>
    <string name="title_activity_deer">Deer</string>
    <string name="deer">Deer</string>
    <string name="deer_desc">Deer (singular and plural) are the ruminant mammals that comprise the family Cervidae. Species therein include white-tailed deer, such mule deer as black-tailed deer, elk, moose, red deer, reindeer fallow deer, roe deer, pudú and chital.</string>
    <string name="title_activity_giraffe">Giraffe</string>
    <string name="giraffe">Giraffe</string>
    <string name="giraffe_desc">The giraffe is the tallest terrestrial animal. They live in South Africa. They feed on trees and bushes and eat in open areas to detect predators.</string>
    <string name="title_activity_bear">Bear</string>
    <string name="bear">Bear</string>
    <string name="bear_desc">Bears are mammals with bulky bodies and short legs. They are diurnal animals, meaning the are active during the day. They are very asocial and are omnivores.</string>
    <string name="title_activity_gazelle">Gazelle</string>
    <string name="gazelle">Gazelle</string>
    <string name="gazelle_desc">A gazelle is a species of antelope. They are fast animals, able to run 60 miles per hour. They are small and stand around three feet. </string>
    <string name="title_activity_elephant">Elephant</string>
    <string name="elephant">Elephant</string>
    <string name="elephant_desc">Elephants are the largest land animal. They can weigh up to 15,000 lbs. They are herbivorous and are capable of hearing low frequencies.  Females live in groups where one will be the leader, having her daughter take over the role when she is done.</string>
    <string name="title_activity_hippo">Hippo</string>
    <string name="hippo">Hippo</string>
    <string name="hippo_desc">The name hippo means "river horse" in ancient Greek. They are the third largest mmamal that lives on land.They are relatives of whales. They spend most of their lives in the water.</string>
    <string name="title_activity_wild_animals">WildAnimals</string>
    <string name="mammalso">Other Mammals</string>
    <string name="title_activity_other_mammals">OtherMammals</string>
    <string name="title_activity_canines">Canines</string>
    <string name="title_activity_felines">Felines</string>
    <string name="title_activity_wild_rodents">WildRodents</string>
    <string name="title_activity_wild_reptiles">WildReptiles</string>
    <string name="title_activity_wild_birds">WildBirds</string>
    <string name="title_activity_hamster">Hamster</string>
    <string name="title_activity_pig">Pig</string>
    <string name="title_activity_guineapig">Guineapig</string>
    <string name="title_activity_alligator">Alligator</string>
    <string name="alligator">Alligator</string>
    <string name="alligator_desc">Alligators have been alive for 37 million years. The adult weighs 360 kg. They live in freshwater such as swamps. In some situations, alligators will eat panthers and bears.</string>
    <string name="title_activity_meerkat">Meerkat</string>
    <string name="meerkat">Meerkat</string>
    <string name="meerkat_desc">Meerkats live in clans that normally contain 20 other meerkats. They live underground in burrows that have many entrances. A few meerkats will stand watch while other meerkats play and forage for food.</string>
    <string name="title_activity_penguin">Penguin</string>
    <string name="penguin">Penguin</string>
    <string name="penguin_desc">Penguins are flightless birds that live in Antartica. Their wings are flippers they use to swim in water.  They feed on fish, squid, and other sealife.</string>
    <string name="title_activity_wolf">Wolf</string>
    <string name="wolf">Wolf</string>
    <string name="wolf_desc">Wolves live in units that are called packs or mated pairs. They are normally accompanied by their offspring. They are very territorial animals and establish territory to make claim on prey. They are monogamous, meaning they choose a mate for life.</string>
    <string name="definitions">Definitions</string>
    <string name="catinfo">Cats are carniorous mammals. They are kept as indoor pets. They are valued by people for hunting vermin and being companions. They have quick reflexes, sharp claws, and are flexible.</string>
    <string name="fresh">Fresh Water</string>
    <string name="amphibian">Amphibian</string>
    <string name="sea">Sea Water</string>
    <string name="dolphin">Dolphin</string>
    <string name="dolphininfo">Dolphins are mammals that are closely related to whales. They eat squid and fish. They are thought of as most intelligent animal and are highly social.</string>
    <string name="back">Go Back</string>
    <string name="home">Home</string>
    <string name="lizard">Lizard</string>
    <string name="lizard_desc">Lizards are squamate reptiles. They can be found in every part of the world except Antartica. Lizards normally have external ears and feet.</string>
</resources>