<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:paddingTop="50dp"
     android:paddingLeft="65dp"
 
        android:background="@color/backgroundcolor"
    android:orientation="vertical"
    tools:context=".WildAnimals" >

  
    <TextView
 android:id="@+id/textView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"
android:paddingLeft="38dp"
android:paddingBottom="10dp"
  android:text="@string/wild"
android:textColor="@color/textcolor"
        android:textSize="18sp"
/>
 
<Button
android:id="@+id/button1"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/canines"
   android:textColor="@color/textcolor"
/>
    <Button
android:id="@+id/button2"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/felines"
       android:textColor="@color/textcolor"
/>
    
    <Button
android:id="@+id/button3"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/reptiles"
   android:textColor="@color/textcolor"
/>
    <Button
android:id="@+id/button4"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/rodents"
       android:textColor="@color/textcolor"
/>
 <Button
android:id="@+id/button5"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/birds"
   android:textColor="@color/textcolor"
/>
    <Button
android:id="@+id/button6"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/mammalso"
       android:textColor="@color/textcolor"
/>
</LinearLayout>
