<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     
    android:layout_width="match_parent"
    android:layout_height="match_parent"
          android:paddingTop="50dp"
     android:paddingLeft="65dp"
 
        android:background="@color/backgroundcolor"
    android:orientation="vertical"
    tools:context=".Aquatic" >

 <TextView
 android:id="@+id/textView1"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="20dp"
android:paddingLeft="53dp"
android:paddingBottom="10dp"
  android:text="@string/aquatic"
android:textColor="@color/textcolor"
        android:textSize="18sp"
/>
 
<Button
android:id="@+id/button1"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/fresh"
   android:textColor="@color/textcolor"
/>
    <Button
android:id="@+id/button2"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/sea"
       android:textColor="@color/textcolor"
/>
    
    <Button
android:id="@+id/button3"
android:layout_width="180dp"
android:layout_height="50dp"
android:layout_marginRight="20dp"
android:layout_marginBottom="5dp"
  android:background="@color/buttoncolor"
        android:text="@string/amphibian"
   android:textColor="@color/textcolor"
/>
</LinearLayout>
